[tool.poetry]
name = "rlweight"
version = "1.0.0"
description = "Reinforcement Learning based Weight Optimizer"
authors = ["Jason <eppioes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
torch = "2.6.0"
numpy = "2.2.3"
pandas = "2.2.3"


[tool.poetry.group.dev.dependencies]
mlflow = "2.20.2"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
