[tool.poetry]
name = "rlweight"
version = "1.4.0"
description = "Reinforcement Learning based Weight Optimizer"
authors = ["Jason <eppioes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
torch = "2.6.0"
numpy = "2.2.3"
pandas = "2.2.3"
mlflow = "2.20.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
